fix: typing indicator always visible despite scroll level

--- a/static/css/activeUsers.css
+++ b/static/css/activeUsers.css
@@ -56,45 +56,13 @@
   color: red;
 }
 
+.status.typing::after {
+  content: '...';
+}
+
 .ConversationArea {
   position: absolute;
   left: 50%;
   top: 50vh;
   transform: translate(-50%, -50%);
-}
-
-.indicator.typing {
-  display: flex;
-  width: fit-content;
-  gap: 8px;
-}
-
-
-.indicator.typing .dot {
-  width: 8px;
-  height: 8px;
-  background: #888;
-  border-radius: 50%;
-  animation: blink 1.4s infinite linear;
-  opacity: 0.3;
-}
-
-.indicator.typing .dot:nth-child(2) {
-  animation-delay: 0.2s;
-}
-
-.indicator.typing .dot:nth-child(3) {
-  animation-delay: 0.4s;
-}
-
-@keyframes blink {
-  50% {
-    opacity: 1;
-    transform: scale(1.3);
-  }
-
-  100% {
-    opacity: 0.3;
-    transform: scale(1);
-  }
 }
